--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 
 
 <section class="flex-column" id="more-works">
-  <h2 class="in-out-el">There're more</h2>
-  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View all</h5></a>
+  <h2 class="in-out-el" style="text-align: center;">There is still a bit more to see</h2>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View All</h5></a>
   <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch, it's amateur work, but it works :)</i></p></span>
 </section>
 
@@ -291,10 +291,12 @@
 
 
 <section class="flex-column" id="contact-me">
-  <h3 class="in-out-el">Thank you for making it this far, now</h3>
-  <h1 class="in-out-el" style="text-align:center;">Let's talk</h1>
-    <a class="big-link in-out-el" id="home-mailto" target="_blank"
-    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a>
+  <h3 class="in-out-el" style="text-align: center;">Thank you for making it this far, now</h3>
+  <a class="in-out-el colorful-link" id="home-mailto" target="_blank"
+    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h1 style="text-align:center;">Let's talk</h1></a>
+    
+    <!-- <a class="big-link in-out-el" id="home-mailto" target="_blank"
+    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a> -->
 
   <a class="" href="about.html" title="About me">
     <?xml version="1.0" encoding="UTF-8"?>
