--- a/works.html
+++ b/works.html
@@ -62,7 +62,7 @@
 
   <section class="all-works">
 
-    <div class="tile-set" id="first-tile-set">
+    <!-- <div class="tile-set" id="first-tile-set"> -->
       <div class="work-tiles">
 
         <div class="work-tile block-in" >
@@ -85,9 +85,9 @@
             <img alt="SA Logo" src="./Assets/logo_sa.png" />
           </a>
         </div>
-      </div>
+      <!-- </div> -->
 
-      <div class="work-tiles" id="first-tiles">
+      <!-- <div class="work-tiles" id="first-tiles"> -->
         <div class="work-tile block-in" id="title-tile">
           <h1 class="centered-text">A glimpse of my works</h1>
         </div>
@@ -98,13 +98,13 @@
             <img alt="SA Logo" src="./Assets/logo_rr.png" />
           </a>
         </div>
-      </div>
+      <!-- </div> -->
 
-    </div>
+    <!-- </div> -->
 
 
-    <div class="tile-set">
-      <div class="work-tiles">
+    <!-- <div class="tile-set"> -->
+      <!-- <div class="work-tiles"> -->
 
         <div class="work-tile block-in">
           <div id="tile_Danias"></div>
@@ -198,9 +198,6 @@
           </div>
         </div>
 
-
-
-
         <div class="work-tile block-in">
           <div class="tile-desc">
             <p>Coursework</p>
@@ -238,7 +235,6 @@
         </div>
 
 
-
         <div class="work-tile block-in">
           <div id="tile_nabulio"></div>
           <a class="tile-CTA">
@@ -248,7 +244,7 @@
         </div>
 
       </div>
-   </div>
+   <!-- </div> -->
 
   </section>
 
