Fixed works.html display issues

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 <section class="flex-row" id="home-intro">
  
  <div class="opening_line">
-  <h1 class="in-out-el" id="intro_text">Welcome</h1>
-  <h2 class="in-out-el" id="intro_sub_text">to my humble portfolio</h2>
+  <h1 class="in-out-el" id="intro_text">G'day!</h1>
+  <span><h2 class="in-out-el" id="intro_sub_text">Welcome to my portfolio</h2></span>
 </div>
 
     <!-- CTA arrow for next page -->
@@ -137,7 +137,7 @@
     <h2>
         I am a multidisciplinary product enthusiast<br />
     </h2>
-      <h3> I believe in Science, revere Technology, and take joy in the Aesthetic </h3>
+      <h3> I believe in <span style="color: #197FCD">Science</span>, revere <span style="color: #C00897;">Technology</span>, and take joy in the <span style="color: #FEB507">Aesthetic</span> </h3>
 
       <span class="scroll-icon">
         <span class="scroll-wheel"></span>
@@ -283,8 +283,8 @@
 
 <section class="flex-column" id="more-works">
   <h2 class="in-out-el" style="text-align: center;">There is still a bit more to see</h2>
-  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View All</h5></a>
-  <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch, it's amateur work, but it works :)</i></p></span>
+  <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View More</h5></a>
+  <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch. Amateur, I know. But hey, it works :)</i></p></span>
 </section>
 
 
@@ -293,7 +293,7 @@
 <section class="flex-column" id="contact-me">
   <h3 class="in-out-el" style="text-align: center;">Thank you for making it this far, now</h3>
   <a class="in-out-el colorful-link" id="home-mailto" target="_blank"
-    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h1 style="text-align:center;">Let's talk</h1></a>
+    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut" title="Shoot me a line"><h1 style="text-align:center;">Let's talk</h1></a>
     
     <!-- <a class="big-link in-out-el" id="home-mailto" target="_blank"
     href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a> -->
