--- a/works.html
+++ b/works.html
@@ -110,13 +110,14 @@
           <div id="tile_Danias"></div>
           <a class="tile-CTA">
             <!-- <img alt="Danias Website" src="./Assets/Danias-Homepage.jpg" /> -->
-            <p>Danias Website Design</p>
+            <p>Real Quick Website Design</p>
           </a>
         </div>
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
-            <p>Coursework</p>
+            <h4>Coursework</h4>
+            <p>3DsMax & After Effects</p>
             <h2>A 3D Animation</h2>
           </div>
 
@@ -137,7 +138,8 @@
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
-            <p>Coursework</p>
+            <h4>Coursework</h4>
+            <p>Paper & my old Macbook's cam</p>
             <h2>A Cutout Animation</h2>
           </div>
 
@@ -158,7 +160,8 @@
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
-            <p>Coursework</p>
+            <h4>Coursework</h4>
+            <p>Kitchen stuff & my old Macbook's cam</p>
             <h2>A Stop-motion Animation</h2>
           </div>
 
@@ -179,7 +182,8 @@
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
-            <p>Coursework</p>
+            <h4>Coursework</h4>
+            <p>Playdough & my old Macbook's cam</p>
             <h2>A Morphing Animation</h2>
           </div>
 
@@ -200,7 +204,8 @@
 
         <div class="work-tile block-in">
           <div class="tile-desc">
-            <p>Coursework</p>
+            <h4>Coursework</h4>
+            <p>Adobe Flash</p>
             <h2>A Flash Animation</h2>
           </div>
 
@@ -222,13 +227,15 @@
         <div class="work-tile block-in">
           <div id="tile_cdCover"></div>
           <a class="tile-CTA">
-            <p>Conceptual artwork for an interactive CD Cover</p>
+            <h4>CD Cover</h4>
+            <p><i>Supposed to be interactive (using Adobe Flash), but I lost the file (oops!)</i></p>
           </a>
         </div>
 
         <div class="work-tile block-in">
           <div id="tile_type-creature"></div>
           <a class="tile-CTA">
+            <h4>Conceptual Artwork</h4>
             <p>Another depiction of "Typeface"</p>
             <small>A look into words, images, messages & meanings</small>
           </a>
@@ -239,11 +246,12 @@
           <div id="tile_nabulio"></div>
           <a class="tile-CTA">
             <img alt="Nabulio Logo" src="./Assets/nabulio.png" />
-            <p>Logo Design for an exquisite handmade accessories brand</p>
+            <h4>Logo Design</h4>
+            <p>Side Hustle</p>
           </a>
         </div>
 
-      </div>
+   </div>
    <!-- </div> -->
 
   </section>
