Fine-tuning (cont)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Nhut's Portfolio">
   <meta name="keywords" content="Nhut Hoang-Don, Nhut Hoang, Nhut, Nhut H. Don, UI, UX, UI/UX Portfolio, Portfolio, Designer, UI/UX Designer, Profile, Creative Portfolio, Creative Profile, multidisciplinary design, multidisciplinary designer, product design">
-  <meta name="author" content="Nhut H. Don">
+  <meta name="author" content="Nhut Hoang-Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="apple-touch-icon" sizes="180x180" href="./Assets/apple-touch-icon.png">
