--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -67,7 +67,6 @@
   </div>
 
   <div class="mouse_scroll">
-
 		<div class="mouse">
 			<div class="wheel"></div>
 		</div>
@@ -82,7 +81,7 @@
     </div>
       <div class="block">
         <p>
-          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to everyone.
+          <strong><u>Concept:</u></strong>a smart, inclusive, accessible healthcare system that helps managing symptoms and diseases from the start 
           <br />
           <strong><u>Primary Target Market:</u></strong> developing countries.
            <br />
