Home revamp done. Works & projects in progress

--- a/bardot.html
+++ b/bardot.html
@@ -70,16 +70,16 @@
     <div class="block">
       <h2 class="block-in">The Brief</h2>
       <p class="block-in">
-        Bardot was looking for a new, refreshed design for their eCommerce website.
-        Our teams' mission was to optimise the current site's UX/UI and deliver a new shopping experience that would drive conversion rate forward.
+        New eCommerce website with a refreshing look and user-centered design.
+        The mission was to optimise the current site's UX/UI and deliver a new shopping experience that would drive conversion rate forward.
       </p>
     </div>
       <div class="block">
         <p>
           <strong class="block-in">Platform</strong> <br />
-           Responsive web. <br /><br />
-          <strong class="block-in">Deliveries</strong> <br />
-           Interactive Prototype.
+           Responsive web <br /><br />
+          <strong class="block-in">Deliverables</strong> <br />
+           Interactive Prototype
         </p>
       </div>
   </div>
@@ -89,7 +89,7 @@
   <h3 class="block-in">CHALLENGES</h3>
     <div class="block block-in">
       <p>
-        Micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents.
+        Micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents
       </p>
     </div>
 </section>
@@ -101,7 +101,7 @@
       <h4 class="block-in">SEARCH Enhancement</h4>
       <p class="block-in">
         Search is an important function for most platforms, even more so for eCommerce.
-         The first approach in the redesign process was to reconstruct the header, with a focus on the Search function.
+         The first approach in the redesign process was to reconstruct the header, with a focus on the Search function
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -116,7 +116,7 @@
     <div class="block small-block">
       <h4 class="block-in">SEARCH SUGGESTION</h4>
       <p class="block-in">
-        Analysed and suggested search algorithms as a result of the collaboration between UX research, design, and development teams.
+        Search Suggestion strategy that offered visual and textual hints that aligned with the marketing agenda, influencing user decisions
       </p>
     </div>
   </div>
@@ -133,8 +133,8 @@
     <div class="block">
       <h4 class="block-in">Header Revamp</h4>
       <p class="block-in">
-        Heatmaps from user research showed the majority of interactions happened within the top.
-        We decluttered the old header, removed unnecessary items, and made mandatory ones easily accessible.
+        Heatmaps from user research showed the majority of interactions occured within the top.
+        Our team decluttered the old header, got rid of redundancy, and highlighted mandatory items
       </p>
     </div>
 
@@ -149,7 +149,7 @@
     <div class="block">
       <h4 class="block-in">DROPDOWN MENU UI</h4>
       <p class="block-in">
-        Redesigned the Dropdown Menu, enhanced its UI, sorted the categories with a better taxonomy.
+        Dropdown menu redesign with enhanced UI and category taxonomy
       </p>
     </div>
 
