--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -81,11 +81,9 @@
     </div>
       <div class="block">
         <p>
-          <strong><u>Concept:</u></strong>a smart, inclusive, accessible healthcare system that helps managing symptoms and diseases from the start 
-          <br />
-          <strong><u>Primary Target Market:</u></strong> developing countries.
+          <strong><u>Concept:</u></strong> a personalised, inclusive, accessible healthcare system that helps managing symptoms and diseases. Not just a symptom checker, it aims to provide transparency in diagnostic and inform users about their conditions.
            <br />
-          <strong><u>My Role:</u></strong> conceptualise, UX/UI, product vision.
+          <strong><u>My Role:</u></strong> conceptualisation, prototyping
         </p>
       </div>
   </div>
@@ -95,11 +93,11 @@
 
 <section class="hiw-section" id="schecker-hiw-section">
 
-  <h3>Feature Breakdown</h3>
+  <h3>How it works</h3>
 
   <div class="wrapper how-it-works" id="hiw-1">
     <div class="hiw-feature-heading justify-end">
-      <h5 class="right-aligned">Symptom Assessment</h5>
+      <h5 class="right-aligned">1. Symptom Assessment</h5>
     </div>
 
     <div class="hiw-feature-ic" id="ic_check">
@@ -108,7 +106,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        First step of the flow. Should be intuitive enough to provide users a hassle-free experience checking symptoms.
+        Personalised symptom checker function, tailored questions for individual circumstances
       </p>
     </div>
   </div>
@@ -119,8 +117,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Continued from Symptom checking result as next step of the flow, or book independently.
-        Easy and quick booking process with appoinment management features.
+        Find, book, and manage appointments with relevant physicians/clinics. Assessment questionnaires and results will be sent to appointed doctor(s) upon confirmed bookings
       </p>
     </div>
 
@@ -129,7 +126,7 @@
     </div>
 
     <div class="hiw-feature-heading justify-start">
-      <h5 class="left-aligned">Appoinment Booking</h5>
+      <h5 class="left-aligned">2. Appoinment Booking</h5>
     </div>
   </div>
 
@@ -138,7 +135,7 @@
   <div class="wrapper how-it-works" id="hiw-3">
 
     <div class="hiw-feature-heading justify-end">
-      <h5 class="right-aligned">Symptoms & Medication Management</h5>
+      <h5 class="right-aligned">3. Symptom & Medication Management</h5>
     </div>
 
     <div class="hiw-feature-ic" id="ic_track">
@@ -147,7 +144,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Allows users to manage diagnosed and undiagnosed symptoms/diseases and keep track of their medication.
+        Keep track of diagnosed & undiagnosed symptoms/diseases together with their relevant medication/treatments 
       </p>
     </div>
 
@@ -162,7 +159,7 @@
   <h3>CONCEPT DEVELOPMENT</h3>
 
   <div id="schecker-draggable-flow" >
-    <h5 class="secondary-title">End User App Flow (Patients)<br /><small>(drag to view)</small></h5>
+    <h5 class="secondary-title">End-user App Flow (Patients)<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
